appshare: present own desktop

--- a/configure.ac
+++ b/configure.ac
@@ -374,6 +374,7 @@ AC_ARG_ENABLE([purple],
 	[],
 	[enable_purple=yes])
 ac_have_appshare=no
+ac_have_rdp_server=no
 ac_have_xdata=no
 with_purple_vv=no
 AS_IF([test "x$enable_purple" != xno],
@@ -470,7 +471,12 @@ AS_IF([test "x$enable_purple" != xno],
 				  ac_have_xdata=yes
 
 				  dnl gio-2.0 is mandatory for application sharing support
-				  PKG_CHECK_MODULES(GIO, [gio-2.0], [ac_have_appshare=yes])
+				  PKG_CHECK_MODULES(GIO, [gio-2.0],
+				   [ac_have_appshare=yes
+
+				    dnl freerdp-shadow2 is mandatory for RDP server support
+				    PKG_CHECK_MODULES(FREERDP_SHADOW, [freerdp-shadow2], [ac_have_rdp_server=yes])
+				   ])
 				 ]
 			 )
 			],
@@ -534,6 +540,11 @@ dnl enable appshare support
 AM_CONDITIONAL(SIPE_HAVE_APPSHARE, [test "x$ac_have_appshare" == xyes])
 AS_IF([test "x$ac_have_appshare" == xyes],
 	[AC_DEFINE(HAVE_APPSHARE, 1, [Define to 1 if we have appshare support.])])
+
+dnl RDP server for sharing local desktop
+AM_CONDITIONAL(SIPE_HAVE_RDP_SERVER, [test "x$ac_have_rdp_server" = xyes])
+AS_IF([test "x$ac_have_rdp_server" == xyes],
+	[AC_DEFINE(HAVE_RDP_SERVER, 1, [Define if RDP server is enabled.])])
 
 dnl telepathy code parts rely on interfaces that require GValueArray. This
 dnl type has been declared "deprectated" in glib-2.0 >= 2.32.0, but there
